	  [this is a correction;  a previous change log entry indicated that Connector/Net
	   no longer required select privs on mysql database.  This is not true and select privs
	   are required. This will be fixed when the server exposes procedure parameters via
 	   information schema.]
    Bug #25013 Return Value parameter not found 
    Bug #22400 Nested transactions 
		
    Other changes
    -------------
    Turned MySqlPoolManager into a static class and added a static ctor to
         avoid any race conditions related to initializing the hashtable.
         (A similar suggestion came in from a user)
    Added 'Ignore Prepare' connection string option for disabling prepared
         statements application-wide    
    A nicer exception is displayed if you have added a parameter without the parameter marker.
    Improved CommandBuilder.DeriveParameters to use the procedure cache if possible
    
Version 1.0.8 RC

    Other changes
    -------------
    Implemented a stored procedure cache
    Changed how stored procedure metadata is retrieved to allow users without select privs
    on mysql.proc to use them
    Fixed shared memory connections
    Increased speed of MySqlParameterCollection.IndexOf(string) orders of magnitude
         (parameter name lookups are now strict on use of parameter marker)
    
    Bugs fixed or addressed
    -----------------------
    Bug #16659 Can't use double quotation marks(") as password access server by Connector/NET [fixed]
    Bug #17375 CommandBuilder ignores Unsigned flag at Parameter creation [fixed]
    Bug #17749 There is no char type in MySqlDbType [fixed]
    Bug #16788 Only byte arrays and strings can be serialized by MySqlBinary [fixed]
    Bug #16645 FOUND_ROWS() Bug [can't repeat - added test case]
    Bug #18570 Unsigned tinyint (NET byte) incorrectly determined param type from param val	[fixed]
    Bug #19261 Supplying Input Parameters [fixed]